--- a/AppRazor/appsettings.json
+++ b/AppRazor/appsettings.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ApplicationSecrets": {
+      "SecretStorage": "UserSecrets"
+  },
+
+  "DatabaseConnections": {
+    "DefaultDataUser": "dbo",    // "gstusr" | "usr" | "supusr" | "dbo" | "root"
+    "MigrationUser": "root",     // migration is done by root user
+    "UseDataSetWithTag": "sql-friends.sqlserver.docker" 
+  },
+
+  "DataService": 
+  {
+    "DataSource": "Database",    //"Database" | "WebApi"
+    //"WebApiBaseUri": "https://localhost:7066/api/"
+    "WebApiBaseUri": "https://friends.api.secure.seido.se/swagger/index.html"
+  }
 }
