La till usersecrets på alla filer i projektet

--- a/DbModels/DbModels.csproj
+++ b/DbModels/DbModels.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <UserSecretsId>93e60607-f193-41be-a9ca-d835ff28d6b6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
