--- a/DbRepos/DbRepos.csproj
+++ b/DbRepos/DbRepos.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <UserSecretsId>b1e2f55e-917a-4f9b-ae31-7d2c4194f387</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
