--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <UserSecretsId>eb16d45b-cb89-40cc-b7ae-480f62ba746b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
