--- a/DbContext/DbContext.csproj
+++ b/DbContext/DbContext.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <UserSecretsId>557b5459-35e2-44bd-b459-f0e57b82e2fc</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
