--- a/Encryptions/Encryptions.csproj
+++ b/Encryptions/Encryptions.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <UserSecretsId>d3678917-d74e-43a4-b1ed-4d8c250b4b01</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
