--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <UserSecretsId>5faaa3d9-a0f7-4cf8-b2e5-f6d066b05c6c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
